--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
+    "@types/crypto-js": "^4.2.1",
     "autosuggest-highlight": "^3.3.4",
     "clsx": "^2.0.0",
+    "crypto-js": "^4.2.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
