--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,16 @@
     "@mui/material": "^5.14.18",
     "@types/crypto-js": "^4.2.1",
     "autosuggest-highlight": "^3.3.4",
+    "axios": "^1.6.2",
     "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "tailwind-merge": "^2.0.0"
+    "swr": "^2.2.4",
+    "tailwind-merge": "^2.0.0",
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/autosuggest-highlight": "^3.2.0",
